Support mobile browser

--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>veh-sim</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <link href="veh-sim.css" rel="stylesheet" type="text/css"/>
   <script src="gl-matrix-min.js"></script>
   <script src="veh-sim.js" type="module"></script>
 </head>
 <body>
-  <p>Welcome to <b>Vehicle Simulation</b></p>
-  <canvas width="1024" height="576"></canvas>
+  <canvas></canvas>
 </body>
 </html>
